Resolves: tdf#93887 distinguish between empty selection lost selection

Change-Id: Id0be728602b3c58b2853ff464336d68303531efe